k8s/istio/debugapp-ingressgateway-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    istio: debugapp-ingressgateway
  name: debugapp-ingressgateway
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      istio: debugapp-ingressgateway
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
        seccomp.security.alpha.kubernetes.io/pod: docker/default
        sidecar.istio.io/inject: "false"
      creationTimestamp: null
      labels:
        istio: debugapp-ingressgateway
    spec:
      containers:
        - args:
            - proxy
            - router
            - -v
            - "2"
            - --discoveryRefreshDelay
            - 1s
            - --drainDuration
            - 45s
            - --parentShutdownDuration
            - 1m0s
            - --connectTimeout
            - 10s
            - --serviceCluster
            - istio-internal-ingressgateway
            - --zipkinAddress
            - zipkin:9411
            - --proxyAdminPort
            - "15000"
            - --controlPlaneAuthPolicy
            - NONE
            - --discoveryAddress
            - istio-pilot:8080
          image: gcr.io/gke-release/istio/proxyv2:1.0.3-gke.3
          imagePullPolicy: IfNotPresent
          name: istio-proxy
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 31400
              protocol: TCP
            - containerPort: 15011
              protocol: TCP
            - containerPort: 8060
              protocol: TCP
            - containerPort: 853
              protocol: TCP
            - containerPort: 15030
              protocol: TCP
            - containerPort: 15031
              protocol: TCP
            - containerPort: 15090
              name: http-envoy-prom
              protocol: TCP
            - containerPort: 50051
              name: grpc
              protocol: TCP
          resources:
            limits:
              cpu: 16
              memory: 60Gi
            requests:
              cpu: 8
              memory: 30Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/certs
              name: istio-certs
              readOnly: true
            - mountPath: /etc/istio/ingressgateway-certs
              name: ingressgateway-certs
              readOnly: true
            - mountPath: /etc/istio/ingressgateway-ca-certs
              name: ingressgateway-ca-certs
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: istio-internal-ingressgateway-service-account
      serviceAccountName: istio-internal-ingressgateway-service-account
      terminationGracePeriodSeconds: 30
      volumes:
        - name: istio-certs
          secret:
            defaultMode: 420
            optional: true
            secretName: istio.internal-ingressgateway-service-account
        - name: ingressgateway-certs
          secret:
            defaultMode: 420
            optional: true
            secretName: istio-ingressgateway-certs
        - name: ingressgateway-ca-certs
          secret:
            defaultMode: 420
            optional: true
            secretName: istio-ingressgateway-ca-certs
