k8s/istio/debugapp-ingressgateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: debugapp-ingressgateway
  namespace: istio-system
  labels:
    istio: debugapp-ingressgateway
spec:
  type: LoadBalancer
  selector:
    istio: debugapp-ingressgateway
  ports:
    -
      name: http
      nodePort: 31380
      port: 80
    -
      name: https
      nodePort: 31390
      port: 443
    -
      name: tcp
      nodePort: 31400
      port: 31400
